# GPU-Specialisation-IP

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SETUP.md  SETUP_FIXED.md  build.sh  run_all_filters.sh  test_filters.sh
data/: README.md
include/: image_io.h  kernels.h
src/: image_io.cu  image_io_impl.cpp  kernels.cu  main.cu
